# mem0-open-mcp

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  basedpyrightconfig.json  docker-compose.yaml  mem0-open-mcp.example.yaml  pyproject.toml  pyrightconfig.json
.github/workflows/: publish.yml
.sisyphus/notepads/mem0-improvements/: decisions.md  issues.md  learnings.md
.sisyphus/plans/: mem0-improvements.md
docs/: OPENCODE_GUIDE.md  TROUBLESHOOTING.md
examples/: ollama-config.yaml
src/mem0_server/: __init__.py  cli.py  memory_ops.py  pyrightconfig.json  server.py
src/mem0_server/api/: __init__.py  routes.py
src/mem0_server/config/: __init__.py  loader.py  schema.py
src/mem0_server/mcp/: __init__.py  server.py
src/mem0_server/utils/: __init__.py
tests/: test_api.py  test_config.py
