[project]
name = "mem0-open-mcp"
version = "0.2.4"
description = "Open-source MCP server for mem0 - local LLMs, self-hosted, Docker-free"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Alex" }
]
keywords = ["mem0", "mcp", "memory", "llm", "ai", "server", "ollama", "local"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mem0ai>=1.0.0",
    "typer[all]>=0.12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "langchain-neo4j>=0.1.0",
    "rank-bm25>=0.2.0",
    "psutil>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
qdrant = ["qdrant-client>=1.12.0"]
chroma = ["chromadb>=0.5.0"]
pinecone = ["pinecone>=5.0.0"]
ollama = ["ollama>=0.4.0"]
neo4j = ["langchain-neo4j>=0.1.0", "rank-bm25>=0.2.0"]
kuzu = ["kuzu>=0.4.0"]

[project.scripts]
mem0-open-mcp = "mem0_server.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mem0_server"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
